```plantuml
@startuml UML - Classe - Offres d'emploi

skinparam dpi 300
skinparam maxwidth 8000
skinparam maxheight 8000
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 60
skinparam ranksep 80
skinparam linetype ortho

left to right direction


'========================================================
' JOB OFFER
'========================================================

class JobOffer {
    - id: string
    - title: string
    - content: JSON
    - publicationStatus: string
    - minSalary: Decimal
    - maxSalary: Decimal
    - currency: string
    - jobWorkMode: string
    - activityStatus: string
    - publicationDate: Date
    - expertise: string
    - createdAt: DateTime
    - updatedAt: DateTime
}

class Company {
    - id: string
    - name: string
    - siret: string
    - createdAt: DateTime
}

class User {
    - id: string
    - userRole: string
}

class Address {
    - id: int
    - country: string
    - postalCode: string
    - city: string
    - street: string
}


' Une entreprise possède plusieurs offres.
' Une offre appartient à une seule entreprise.
Company "1" o-- "0..*" JobOffer : offers

' Un utilisateur peut créer plusieurs offres.
' La création est une association, pas une composition.
User "1" --> "0..*" JobOffer : creates

' Une adresse peut être partagée et existe indépendamment de l'offre.
JobOffer "0..*" --> "0..1" Address : address


'========================================================
' DEPARTMENT
'========================================================

class Department {
    - id: int
    - label: string
    - description: string
    - code: string
    - externalRef: string
}

' Un département peut avoir un département parent.
' Auto-association simple : les départements existent indépendamment.
Department "0..1" <-- "0..*" Department : parent

' Une offre appartient obligatoirement à un département.
JobOffer "*" --> "1" Department : department


'========================================================
' CONTRACT
'========================================================

class ContractType {
    - id: int
    - label: string
    - country: string
    - default: boolean
    - organisationId: string
}

' Un type de contrat peut être utilisé par plusieurs offres.
' Le type de contrat existe indépendamment des offres.
ContractType "1" <-- "0..*" JobOffer : contract type


'========================================================
' SKILLS
'========================================================

class Skill {
    - id: string
    - ecoUri: string
    - onetCode: string
    - isDefault: boolean
    - canonicalName: string
}

class JobOfferSkill

' JobOfferSkill est une entité associative dépendante de JobOffer.
' Si l'offre est supprimée, ses associations de compétences
' n'ont plus de raison d'exister.
JobOffer "1" *-- "0..*" JobOfferSkill : skills

' Une association JobOfferSkill référence une compétence.
' La compétence existe indépendamment des offres.
JobOfferSkill "*" --> "1" Skill : skill


'========================================================
' VIEWS
'========================================================

class JobOfferView {
    - id: int
    - viewedAt: DateTime
}

class Candidate {
    - id: string
}

' Une vue appartient à une offre.
' Si l'offre disparaît, ses vues disparaissent également.
JobOffer "1" *-- "0..*" JobOfferView : views

' Un candidat peut avoir plusieurs vues.
' Les vues sont rattachées à un candidat, mais le candidat
' existe indépendamment.
Candidate "1" --> "0..*" JobOfferView : views


@enduml
```
